components/janitor-bot/tests/snapshots/integration__pr__argocd-diff-renovate.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: false
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "false"
  - action_groups:
      - actions:
          - argocd_diff
        ran: true
    dry_run: false
    name: argocd-diff-renovate
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
    dry_run: false
    name: label-renovate
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/applications/monitoring.application.yaml?ref=renovate/monitoring
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/applications/monitoring.application.yaml?ref=main
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/issues/100/comments
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/100/comments
    body:
      body: "<!-- janitor-bot:argocd-diff -->\n## ArgoCD Diff\n\n### `monitoring` — `kube-prometheus-stack` (`85.1.1` → `86.0.0`)\n<details>\n<summary>Diff (source 1)</summary>\n\n```diff\n[argocd diff error redacted]\n```\n</details>\n"
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/100/labels
    body:
      labels:
        - renovate
      updated_at: ~
    service: forgejo
  - method: POST
    path: /application.ApplicationService/Get
    service: argocd
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
