components/janitor-bot/tests/snapshots/integration__pr__ci-image-updater-opened-outside-window.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - close_other_prs
        ran: true
        when: is_latest
      - actions:
          - ensure_labels_exist
          - remove_labels_by_name
          - add_labels_by_name
          - approve
          - merge
        ran: false
        when: in_window && needs_approval && is_latest
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
        when: "!in_window && !already_queued && is_latest"
    dry_run: false
    name: manage-ci-image-updater
    variables:
      - name: already_queued
        value: "false"
      - name: in_window
        value: "false"
      - name: is_latest
        value: "true"
      - name: needs_approval
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#fbca04"
      description: ~
      exclusive: ~
      is_archived: ~
      name: janitor/queued
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/104/labels
    body:
      labels:
        - janitor/queued
      updated_at: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
