components/janitor-bot/tests/snapshots/integration__pr__ci-image-updater-opened.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: false
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "false"
  - action_groups:
      - actions:
          - close_other_prs
        ran: true
        when: is_latest
      - actions:
          - ensure_labels_exist
          - remove_labels_by_name
          - add_labels_by_name
          - approve
          - merge
        ran: true
        when: in_window && needs_approval && is_latest
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: "!in_window && !already_queued && is_latest"
    dry_run: false
    name: manage-ci-image-updater
    variables:
      - name: already_queued
        value: "false"
      - name: in_window
        value: "true"
      - name: is_latest
        value: "true"
      - name: needs_approval
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/104/labels
    body:
      labels:
        - image-update
        - automated
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    body:
      body: "Auto-approved: PR from ci-image-updater"
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/104/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
