components/janitor-bot/tests/snapshots/integration__pr__no-conflict.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: true
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/103
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/issues/103/labels/1
    body:
      updated_at: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
