components/janitor-bot/tests/snapshots/integration__pr__renovate-automerge-on-green.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: false
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "false"
  - action_groups:
      - actions:
          - approve
          - merge
        ran: true
    dry_run: false
    name: automerge-renovate-on-green
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/greenshahead0000000000000000000000000000/status
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/200
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/greenshahead0000000000000000000000000000/status
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/200/reviews
    body:
      body: ~
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/200/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
