components/janitor-bot/tests/snapshots/integration__pr__renovate-opened-outside-window.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: false
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "false"
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
    dry_run: false
    name: label-renovate
  - action_groups:
      - actions:
          - ensure_labels_exist
          - remove_labels_by_name
          - add_labels_by_name
          - approve
          - merge
        ran: false
        when: in_window && needs_approval
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
        when: "!in_window && !already_queued"
    dry_run: false
    name: manage-renovate
    variables:
      - name: already_queued
        value: "false"
      - name: in_window
        value: "false"
      - name: needs_approval
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/100/labels
    body:
      labels:
        - renovate
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#fbca04"
      description: ~
      exclusive: ~
      is_archived: ~
      name: janitor/queued
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/100/labels
    body:
      labels:
        - janitor/queued
      updated_at: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
