components/janitor-bot/tests/snapshots/integration__pr__renovate-workflow-change-outside-window.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
    dry_run: false
    name: label-renovate
  - action_groups:
      - actions:
          - ensure_labels_exist
          - remove_labels_by_name
          - add_labels_by_name
          - approve
          - merge
        ran: false
        when: in_window && needs_approval && (!has_checks || checks_passed)
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
        when: "!in_window && !already_queued"
    dry_run: false
    name: manage-renovate
    variables:
      - name: already_queued
        value: "false"
      - name: checks_passed
        value: "false"
      - name: has_checks
        value: "false"
      - name: in_window
        value: "false"
      - name: needs_approval
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/def0000000000000000000000000000000000000/status
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#1a7f37"
      description: ~
      exclusive: ~
      is_archived: ~
      name: renovate
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/101/labels
    body:
      labels:
        - renovate
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/def0000000000000000000000000000000000000/status
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#fbca04"
      description: ~
      exclusive: ~
      is_archived: ~
      name: janitor/queued
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/101/labels
    body:
      labels:
        - janitor/queued
      updated_at: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
