components/janitor-bot/tests/snapshots/integration__pr__renovate-workflow-change.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: has_conflicts && !has_label
      - actions:
          - remove_labels_by_name
        ran: false
        when: "!has_conflicts && has_label"
    dry_run: false
    name: manage-conflicts
    variables:
      - name: has_conflicts
        value: "false"
      - name: has_label
        value: "false"
  - action_groups:
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: true
    dry_run: false
    name: label-renovate
  - action_groups:
      - actions:
          - ensure_labels_exist
          - remove_labels_by_name
          - add_labels_by_name
          - approve
          - merge
        ran: true
        when: in_window && needs_approval
      - actions:
          - ensure_labels_exist
          - add_labels_by_name
        ran: false
        when: "!in_window && !already_queued"
    dry_run: false
    name: manage-renovate
    variables:
      - name: already_queued
        value: "false"
      - name: in_window
        value: "true"
      - name: needs_approval
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#1a7f37"
      description: ~
      exclusive: ~
      is_archived: ~
      name: renovate
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/101/labels
    body:
      labels:
        - renovate
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#e4e669"
      description: ~
      exclusive: ~
      is_archived: ~
      name: automated
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/101/labels
    body:
      labels:
        - automated
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    body:
      body: "Auto-approved: Renovate PR targeting workflows/Dockerfiles"
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/101/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/101
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
